5.0b3 -> 5.0b4:
    - rse: fix %{uncompress:<file>.lzo} by passing the required "-dc" options to LZOP's lzop(1)
    - rse: fix %{uncompress:<file>.lzma} by passing the required "-dc" options to LZMA Utils' lzma(1)
    - rse: support arbitrary hash algorithm via the originally intended syntax "digest([<algorithm>:]/path) = hex"
    - rse: compare MD5 hex value on "digest(/path) = hex" dependency case-insensitive to be less restrictive in syntax
    - rse: merge scripts/lua-dump.lua directly into lua/local/llocal.lua to make it always easily available
    - rse: add local Lua functions util.rmatch() and util.rsubst() for regex matching/substitution
    - rse: improve rex.new Lua object by using PCRE if possible and fallback to POSIX regex only
    - rse: fix loading of "local" Lua extension: it has to come after the other extensions as uses them
    - rse: add error handling to the Lua script loading code generated by bin2c
    - rse: add an RPM Lua function rpm.load() for loading external RPM macro definition file
    - rse: provide RPM Lua function rpm.undefine() based on the C function rpmUndefineMacro
    - rse: provide rpmUndefineMacro API function to complement the existing rpmDefineMacro API function
    - rse: add scripts/lua-dump.lua, a recursive dumper for Lua data structures
    - rse: fix parsing of the table key in RPM Lua function rpm.macros()
    - rse: add an RPM Lua function rpm.source() for loading and executing external Lua script file
    - rse: output "Fetching(SourceX): <url>" to clearly indicate that something is fetched remotely
    - rse: try to download missing source files from remote location only if %{_Rxxxx} is really defined
    - jbj: permit rpm -q --qf '%{track}\n' --specsrpm foo.spec queries.
    - jbj: fix: supply additional indentation for forced array[1] with --yaml.

5.0b2 -> 5.0b3:
    - afb: make find-lang.sh work with sed that doesn't have \+ in regexps.