@@ -1,4 +1,5 @@
 5.0b3 -> 5.0b4:
+    - rse: improve %patch macro implementation: less expansion redundancy and macro namespace collision avoidance
     - rse: fix %{uncompress:<file>.lzo} by passing the required "-dc" options to LZOP's lzop(1)
     - rse: fix %{uncompress:<file>.lzma} by passing the required "-dc" options to LZMA Utils' lzma(1)
     - rse: support arbitrary hash algorithm via the originally intended syntax "digest([<algorithm>:]/path) = hex"
